# esp32-claude-workbench

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Instructions.md  LICENSE  README.md  docs_sources.yaml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude.yml
boards/: README.md  esp32_devkit_v1.md  m5stack_sticks3.md
mcp/: mcp_server.py  requirements.txt
mcp/tools/: __init__.py  mission_generator.py  pin_audit.py  sdkconfig_check.py  search_docs.py
missions/examples/: wifi-reconnect-mission.md
missions/templates/: implementation_contract.md  mission_template.md  test_plan_template.md
playbooks/: ble_debug.md  build_failure.md  guru_meditation.md  hardware_limitations.md  i2c_bringup.md  memory_review.md  ota_update.md  spi_bringup.md  watchdog_reset.md  wifi_debug.md
scripts/: index_esp_docs.py
templates/esp-idf-basic/: CMakeLists.txt  README.md  sdkconfig.defaults
templates/esp-idf-basic/main/: main.c
templates/mqtt-node/: CMakeLists.txt  README.md  sdkconfig.defaults
templates/mqtt-node/main/: CMakeLists.txt  Kconfig.projbuild  main.c
templates/wifi-station/: CMakeLists.txt  README.md  sdkconfig.defaults
templates/wifi-station/main/: CMakeLists.txt  Kconfig.projbuild  main.c  wifi_manager.c  wifi_manager.h
tests/: test_cli_coverage.py  test_contract_generation.py  test_log_parsing.py  test_mcp_tools.py  test_mission_templates.py  test_pin_scanner.py  test_playbook_integrity.py  test_sdkconfig_analyzer.py  test_task_stacks.py
tools/: __init__.py  analyze_sdkconfig.py  check_task_stacks.py  generate_contract.py  scan_pins.py  summarize_logs.py  validate_mission.py
