[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esp32-claude-workbench"
version = "0.1.0"
description = "Deterministic AI workflow for ESP32 firmware development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["esp32", "firmware", "claude", "ai", "testing", "embedded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4.0",
]

[project.scripts]
validate-mission = "tools.validate_mission:main"
generate-contract = "tools.generate_contract:main"
summarize-logs = "tools.summarize_logs:main"
scan-pins = "tools.scan_pins:main"
analyze-sdkconfig = "tools.analyze_sdkconfig:main"
check-stacks = "tools.check_task_stacks:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests that require ESP32 hardware",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.coverage.run]
source = ["tools"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.setuptools.packages.find]
include = ["tools*"]
